Updated animations to improve visibility

--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
                              <i class="fas fa-brain d-sm-block" data-toggle="collapse" data-target="#mind" data-aos="zoom-in"
-                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-delay="100"></i>
+                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom"></i>
                             <h4 class="about-header" data-aos="zoom-in"
-                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-delay="100">Mind</h4>
+                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom" >Mind</h4>
                             <p id="mind" class="collapse display-6 about-content">Yoga increases healthy brain function &amp;
                                 mental
                                 clarity</p>
@@ -124,19 +124,19 @@
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
                             <i class="fas fa-fire-alt d-sm-block" data-toggle="collapse" data-target="#body" data-aos="zoom-in"
-                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-delay="100" ></i>
+                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom"  ></i>
                             <h4 class="about-header" data-aos="zoom-in"
-                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-delay="100">Body</h4>
+                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom" >Body</h4>
                             <p id="body" class="collapse display-6 about-content">Burn calories during our Vinyasa Flow class</p>
                         </div>
                     </div>
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
                             <i class="fas fa-praying-hands d-sm-block" data-toggle="collapse" data-target="#spirit" data-aos="zoom-in"
-                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-delay="100">
+                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom" >
                            </i>
                            <h4 class="about-header" data-aos="zoom-in"
-                           data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-delay="100">Spirit</h4>
+                           data-aos-duration="1000" data-aos-anchor-placement="center-bottom" >Spirit</h4>
                             <p id="spirit" class="collapse display-6 about-content">Find your inner strength through meditation.</p>
                         </div>
                     </div>
@@ -145,9 +145,9 @@
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
                             <i class="fas fa-peace d-sm-block" data-toggle="collapse" data-target="#peace" data-aos="zoom-in"
-                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-delay="100"></i>
+                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom" ></i>
                             <h4 class="about-header" data-aos="zoom-in"
-                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-delay="100">Peace</h4>
+                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom" >Peace</h4>
                             <p id="peace" class="collapse display-6 about-content">Forget all the stress and focus on you.
                             </p>
                         </div>
@@ -155,18 +155,18 @@
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
                             <i class="fas fa-heart d-sm-block" data-toggle="collapse" data-target="#love" data-aos="zoom-in"
-                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-delay="100">  </i>
+                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom" >  </i>
                             <h4 class="about-header" data-aos="zoom-in"
-                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-delay="100">Love</h4>
+                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom" >Love</h4>
                             <p id="love" class="collapse display-6 about-content">Inhale love, exhale all the negative stuff.</p>
                         </div>
                     </div>
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
                             <i class="fas fa-yin-yang d-sm-block"  data-toggle="collapse" data-target="#harmony" data-aos="zoom-in"
-                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-delay="100"></i>
+                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom" ></i>
                             <h4 class="about-header" data-aos="zoom-in"
-                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom" data-aos-delay="100">Harmony </h4>
+                            data-aos-duration="1000" data-aos-anchor-placement="center-bottom" >Harmony </h4>
                             <p id="harmony" class="collapse display-6 about-content">Bring harmony &amp; balance into your life.</p>
                         </div>
                     </div>
@@ -529,16 +529,16 @@
                 <p><a href="https://goo.gl/maps/GCsGgcjKv2tg6coHA" target="_blank">
                     <i class="fas fa-map-marker-alt"
                             data-aos="zoom-in" data-aos-duration="1000" data-aos-anchor-placement="center-bottom"
-                            data-aos-delay="100"></i></a><span class="contact"> New York, New York</span></p>
+                            ></i></a><span class="contact"> New York, New York</span></p>
                 <!--Phone number-->
                 <p><a href="https://www.google.com/gmail/about/" target="_blank">
                     <i class="fas fa-phone"
                             data-aos="zoom-in" data-aos-duration="1000" data-aos-anchor-placement="center-bottom"
-                            data-aos-delay="100"></i></a><span class="contact"> 212.000.0000</span></p>
+                            ></i></a><span class="contact"> 212.000.0000</span></p>
                 <!--Email-->
                 <p><a href="https://voice.google.com/about" target="_blank"><i class="fas fa-envelope-open"
                             data-aos="zoom-in" data-aos-duration="1000" data-aos-anchor-placement="center-bottom"
-                            data-aos-delay="100"></i></a><span class="contact"> owner@infinty.nyc</span></p>
+                            ></i></a><span class="contact"> owner@infinty.nyc</span></p>
             </div>
             <!--./contact-details-->
             <!--Contact Form-->
@@ -569,16 +569,15 @@
         <!--Quotes-->
         <section id="quotes" class="quotes">
             <div class="row text-center">
-                <div class="col-12 section-header">
-                    <h2 class="section-header" data-aos="fade-up"
-                    data-aos-anchor-placement="center-bottom" data-aos-duration="300">Quotes</h2>
+                <div class="col-12 section-header" data-aos="fade-up"
+                data-aos-anchor-placement="center-bottom" data-aos-duration="300">
+                    <h2 class="section-header">Quotes</h2>
                     <hr>
-                    <p data-aos="fade-up"
-                    data-aos-anchor-placement="center-bottom" data-aos-duration="300">Want to know what our members have to say about Infinity? Check out these quotes!</p>
+                    <p>Want to know what our members have to say about Infinity? Check out these quotes!</p>
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col-xs-8 col-sm-4">
+                <div class="col-xs-8 col-sm-4" >
                     <!--First Card-->
                     <div class="card quote-card h-100" data-aos="fade-up"
                     data-aos-anchor-placement="center-bottom" data-aos-duration="300">
