Updated content to make page more semantic

--- a/index.html
+++ b/index.html
@@ -121,29 +121,29 @@
             </div>
             <!--Why Infinity Container-->
             <div class="container-fluid text-center">
-                <h3 class="about-header">Why Infinity?</h3>
+                <h3 class="about-header" style="margin-bottom: 18px; margin-top: 20px;">Why Infinity?</h3>
                 <div class="row">
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
                             <i class="fas fa-brain d-sm-block"></i>
-                            <h4 class="about-header">Mind</h4>
-                            <p class="display-4 about-content">Yoga increases healthy brain function &amp;
+                            <dt><strong>Mind</strong></dt>
+                            <dd>Yoga increases healthy brain function &amp;
                                 mental
-                                clarity</p>
+                                clarity</dd>
                         </div>
                     </div>
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
                             <i class="fas fa-fire-alt d-sm-block"></i>
-                            <h4 class="about-header">Body</h4>
-                            <p class="display-4 about-content">Burn calories during our Vinyasa Flow class</p>
+                            <dt><strong>Body</strong></dt>
+                            <dd>Burn calories during our Vinyasa Flow class</dd>
                         </div>
                     </div>
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
                             <i class="fas fa-praying-hands d-sm-block"></i>
-                            <h4 class="about-header">Spirit</h4>
-                            <p class="display-4 about-content">Find your inner strength through meditation.</p>
+                            <dt><strong>Spirit</strong></dt>
+                            <dd>Find your inner strength through meditation.</dd>
                         </div>
                     </div>
                 </div>
@@ -151,23 +151,23 @@
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
                             <i class="fas fa-peace  d-sm-block"></i>
-                            <h4 class="about-header">Peace</h4>
-                            <p class="display-4 about-content">Forget all the stress and focus on you.
-                            </p>
+                            <dt><strong>Peace</strong></dt>
+                            <dd>Forget all the stress and focus on you.
+                            </dd>
                         </div>
                     </div>
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
                             <i class="fas fa-heart d-sm-block"></i>
-                            <h4 class="about-header">Love</h4>
-                            <p class="display-4 about-content">Inhale love, exhale all the negative stuff.</p>
+                            <dt><strong>Love</strong></dt>
+                            <dd>Inhale love, exhale all the negative stuff.</dd>
                         </div>
                     </div>
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
                             <i class="fas fa-yin-yang d-sm-block"></i>
-                            <h4 class="about-header">Harmony </h4>
-                            <p class="display-4 about-content">Bring harmony &amp; balance into your life.</p>
+                            <dt><strong>Harmony</strong></dt>
+                            <dd>Bring harmony &amp; balance into your life.</dd>
                         </div>
                     </div>
                     <!--./why-infinity-container-->
