Added and styled semantic tags to improve SEO

--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
                 </div>
             </div>
             <div class="row">
-                <div class="flex-column col-12">
-                    <p class="text-md-center font-weight-normal">
-						Infinity is a yoga and meditation studio located in New York, New York. Taught by a staff of dedicated instructors, our yoga and meditation classes help members achieve their fitness goals, find balance in their everyday lives and learn how to cope with stress and anxiety.
+                <div class="col-md-auto">
+                    <p class="about-description">
+						Infinity is a <mark>Yoga</mark> and <mark>Meditation</mark> studio in New York, NY. Taught by a staff of dedicated instructors, our classes help members achieve fitness goals and find balance in their everyday lives.
                     </p>
                 </div>
             </div>
@@ -188,7 +188,7 @@
                 <div class="col-12 section-header">
                     <h2 class="section-header">Schedule</h2>
                     <hr>
-                    <p class="schedule-content">The staff of Infinity is proud to offer diverse classes, a flexible schedule and fair prices. We love what we do and we believe everybody should experience the peace, love &amp; eternal happiness that we feel at our studio.</p>
+                    <p class="schedule-content">The staff of Infinity is proud to offer these classes. We love what we do and we want everybody to experience the peace, love &amp; harmony that we feel at our studio.</p>
                 </div>
             </div>
             <div class="row row-cols-1 row-cols-lg-1">
@@ -203,7 +203,7 @@
                             </div>
                             <!--Card Body-->
                             <div class="card-body">
-                                <h4>Vinyasa Flow</h4>
+                                <h4><b>Vinyasa Flow</b></h4>
                                 <p class="text-muted">Thursdays, 7:00pm | 90 minutes</p>
                                 <hr>
                                 <p>Flow through a sequence of Sun Salutations and standing postures, linking
@@ -308,7 +308,7 @@
                             </div>
                             <!--Card Body-->
                             <div class="card-body">
-                                <h4 class="card-title mt-1">Restorative Yoga</h4>
+                                <h4><b>Restorative Yoga</b></h4>
                                 <p class="text-muted">Wednesdays, 11:00am | 60 minutes</p>
                                 <hr>
                                 <p>Using the support of blankets, bolsters and other props, experience a
@@ -406,7 +406,7 @@
                             </div>
                             <!--Card Body-->
                             <div class="card-body">
-                                <h4 class="card-title mt-1">Chakra Cleansing</h4>
+                                <h4><b>Chakra Cleansing</b></h4>
                                 <p class="text-muted">Mondays, 7:00pm | 90 minutes</p>
                                 <hr>
                                 <p>Cleanse your Chakras and heal from within as an instructor walks you through a series of
