Found and repaired vscode spellcheck errors

--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
 	<!-- Google font -->
 	<link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Lato:400" rel="stylesheet">
-	<!-- Custom stlylesheet -->
+	<!-- Custom Stylesheet -->
 	<link type="text/css" rel="stylesheet" href="assets/css/style.css" />
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -44,8 +44,8 @@
 				
 			</div>
 			<h2>Karma never loses an address</h2>
-			<a class="button" href="index.html">OM'page</a>
-			<a class="button" href="404.html">Nama'STAY</a>
+			<a class="button" href="index.html">H<strong>OM</strong>e page</a>
+			<a class="button" href="404.html">Nama<strong>STAY</strong></a>
 
 			<div class="notfound-social">
 				<a href="#"><i class="fab fa-facebook"></i></a>
