Added links to 404 social media icons

--- a/404.html
+++ b/404.html
@@ -48,10 +48,10 @@
 			<a class="button" href="404.html">Nama<strong>STAY</strong></a>
 
 			<div class="notfound-social">
-				<a href="#"><i class="fab fa-facebook"></i></a>
-				<a href="#"><i class="fab fa-twitter"></i></a>
-				<a href="#"><i class="fab fa-pinterest-p"></i></a>
-				<a href="#"><i class="fab fa-instagram"></i></a>
+				<a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+				<a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+				<a href="https://www.pinterest.com" target="_blank"><i class="fab fa-pinterest-p"></i></a>
+				<a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
 			</div>
 		</div>
 	</div>
