--- a/index.html
+++ b/index.html
@@ -670,6 +670,12 @@
         <i class="fas fa-chevron-up"></i>
     </a>
     <h6>2020 Alissa Troiano | Code Institute Project</h6>
+    <div class="footer-social">
+        <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a>
+        <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a>
+        <a href="https://www.pinterest.com" target="_blank"><i class="fab fa-pinterest"></i></a>
+        <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram-square"></i></a>
+    </div>
 </footer>
 <!--./footer-->
 
