Added w3c jigsaw validation to footer

--- a/index.html
+++ b/index.html
@@ -418,6 +418,15 @@
         <a href="https://www.pinterest.com" target="_blank"><i class="fab fa-pinterest"></i></a>
         <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram-square"></i></a>
     </div>
+    <div class="css-validation" style="margin-top: 10px; margin-bottom: 10px;">
+    <p>
+        <a href="http://jigsaw.w3.org/css-validator/check/referer">
+            <img style="border:0;width:88px;height:31px"
+                src="http://jigsaw.w3.org/css-validator/images/vcss"
+                alt="Valid CSS!" />
+        </a>
+    </p>
+</div>
 </footer>
 <!--./footer-->
 
