--- a/index.html
+++ b/index.html
@@ -361,62 +361,66 @@
 
 <!--Contact Section-->
     <!--Code copied from -->
-<section id="contact">
-    <div class="container-wrapper-contact">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 col-md-offset-2 m-auto">
-                    <ul class="contact-details">
-                        <li id="contact-info">
-                            <p><i class="fas fa-map-marker-alt"></i> New York, NY</p>
-                        </li>
-                        <li id="contact-info">
-                            <p><i class="fas fa-phone"></i> 212.000.000</p>
-                        </li>
-                        <li id="contact-info">
-                            <p><i class="fas fa-envelope-open"></i> owner@infinity.nyc</p>
-                        </li>
-                    </ul>
+    <section id="contact">
+        <div class="container-wrapper-contact">
+            <div class="container">
+                <h2>Contact Us</h2>
+                <hr>
+                <p id="description">We'd love to hear from you. Drop us a line and we'll try to get back to you
+                    as soon as possible!</p>
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2 m-auto">
+                        <div class="contact-form">
+                            <form action="/examples/actions/confirmation.php" method="post">
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <div class="form-group">
+                                            <label for="inputName">Name</label>
+                                            <input type="text" class="form-control" id="inputName" required="">
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <div class="form-group">
+                                            <label for="inputEmail">Email</label>
+                                            <input type="email" class="form-control" id="inputEmail" required="">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="inputSubject">Subject</label>
+                                    <input type="text" class="form-control" id="inputSubject" required="">
+                                </div>
+                                <div class="form-group">
+                                    <label for="inputMessage">Message</label>
+                                    <textarea class="form-control" id="inputMessage" rows="5" required=""></textarea>
+                                </div>
+                                <div class="text-center">
+                                    <a type="submit" class="btn btn-info btn-lg"><i class="fa fa-paper-plane"></i> Send</a>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-8 col-md-offset-2 m-auto">
-                    <div class="contact-form">
-                        <h2>Contact Us</h2>
-                        <hr>
-                        <p id="description">We'd love to hear from you. Drop us a line and we'll try to get back to you
-                            as soon as possible!</p>
-                        <form action="/examples/actions/confirmation.php" method="post">
-                            <div class="row">
-                                <div class="col-sm-6">
-                                    <div class="form-group">
-                                        <label for="inputName">Name</label>
-                                        <input type="text" class="form-control" id="inputName" required>
-                                    </div>
-                                </div>
-                                <div class="col-sm-6">
-                                    <div class="form-group">
-                                        <label for="inputEmail">Email</label>
-                                        <input type="email" class="form-control" id="inputEmail" required>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="inputSubject">Subject</label>
-                                <input type="text" class="form-control" id="inputSubject" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="inputMessage">Message</label>
-                                <textarea class="form-control" id="inputMessage" rows="5" required></textarea>
-                            </div>
-                            <div class="text-center">
-                                <a type="submit" class="btn btn-info btn-lg"><i class="fa fa-paper-plane"></i> Send</a>
-                            </div>
-                        </form>
+                <br>
+                <div class="row">
+                    <div class="col-xs-4 col-md-offset-2 m-auto">
+                        <ul class="contact-details">
+                            <li id="contact-info">
+                                <p><i class="fas fa-map-marker-alt"></i> New York, NY</p>
+                            </li>
+                            <li id="contact-info">
+                                <p><i class="fas fa-phone"></i> 212.000.000</p>
+                            </li>
+                            <li id="contact-info">
+                                <p><i class="fas fa-envelope-open"></i> owner@infinity.nyc</p>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
+<!--./contact-section-->
 
 </main>
 <!--./main-->
