Updated 404 page with branded navbar and links

--- a/404.html
+++ b/404.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-	<!-- Required meta tags -->
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<title>Infinity 404</title>
-	<!-- Font Awesome CDN -->
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" />
-	<!--Adobe Fonts-->
-	<link rel="stylesheet" href="https://use.typekit.net/vky1mut.css">
-	<!--Favicon Link-->
-	<link rel="shortcut icon" type="image/ico" href="assets/images/favicon.ico" />
-	<!-- Google font -->
-	<link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Lato:400" rel="stylesheet">
-	<!-- Custom Stylesheet -->
-	<link type="text/css" rel="stylesheet" href="assets/css/style.css" />
-
+	<head>
+		<!-- Required meta tags -->
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<!-- Bootstrap CDN -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+		<!-- Font Awesome CDN -->
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" />
+	    <!--Adobe Fonts-->
+	    <link rel="stylesheet" href="https://use.typekit.net/vky1mut.css">
+		<!--Favicon Link-->
+		<link rel="shortcut icon" type="image/ico" href="assets/images/favicon.ico" />
+		<link rel="shortcut icon" type="image/ico" href="assets/images/favicon.png" />
+		<!-- Custom Stylesheet -->
+		<link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+		<!-- Title -->
+		<title>Infinity Yoga | Yoga and Meditation in NYC </title>
+	</head>
+	<body>
+	
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
@@ -27,7 +29,43 @@
 		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
 
-</head>
+<!-- Header-->
+<header>
+	<!-- Navbar -->
+	<nav class="navbar navbar-expand-lg navbar-light bg-light bg-shadow fixed-top">
+		<a class="navbar-brand" href="#"><i class="fas fa-infinity"></i> Infinity</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+			aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon">
+			</span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item">
+					<a class="nav-link" href="https://alissatroiano.github.io/MS-1/#about" target="_blank">About</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="https://alissatroiano.github.io/MS-1/#schedule" target="_blank">Schedule</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="https://alissatroiano.github.io/MS-1/#contact" target="_blank">Contact</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="https://alissatroiano.github.io/MS-1/#reviews" target="_blank">Reviews</a>
+				</li>
+			</ul>
+			<ul class="nav navbar-right ml-auto">
+				<li class="nav-item" style="margin: 0 10px;">
+					<p>Monday - Friday</p>
+				</li>
+				<li class="nav-item" style="margin: 0 10px;"><p>9am - 7pm </p></li>
+
+
+		</div>
+	</nav>
+	<!--./navbar-->
+</header>
+<!--./header-->
 
 <body id="notfound-body">
 
@@ -56,6 +94,43 @@
 		</div>
 	</div>
 
+<!--Footer-->
+<footer class="text-center">
+    <a href="#myPage" title="To Top">
+        <i class="fas fa-chevron-up"></i>
+    </a>
+    <h6>2020 Alissa Troiano | Code Institute Project</h6>
+    <div class="footer-social">
+        <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a>
+        <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a>
+        <a href="https://www.pinterest.com" target="_blank"><i class="fab fa-pinterest"></i></a>
+        <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram-square"></i></a>
+    </div>
+</footer>
+<!--./footer-->
+
+<!--Bootstrap Scripts-->
+    <!--jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+    </script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
+<!--./bootstrap-scripts-->
+    
+<!--Responsive Navbar-->
+<script>
+$('.navbar-collapse a').click(function () {
+    $(".navbar-collapse").collapse('hide');
+});
+</script>
+<!--./responsive-navbar-->
+
 </body>
 <!-- This templates was made by Colorlib (https://colorlib.com) -->
 </html>
+s
