--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                             <img src="assets/images/quotes2.png" alt="headshot of happy female infinity member" class="rounded-circle img-fluid">
                         </div>
                         <!--Card Body-->
-                        <div class="card-body">
+                        <div class="card-bbody">
                             <h4 class="card-title mt-1">Sara Solar</h4>
                             <hr>
                             <!--Blockquote-->
@@ -361,65 +361,79 @@
 
 <!--Contact Section-->
     <!--Code copied from -->
-    <section id="contact">
-        <div class="container-wrapper-contact">
-            <div class="container">
-                <h2>Contact Us</h2>
-                <hr>
-                <p id="description">We'd love to hear from you. Drop us a line and we'll try to get back to you
-                    as soon as possible!</p>
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2 m-auto">
-                        <div class="contact-form">
-                            <form action="/examples/actions/confirmation.php" method="post">
-                                <div class="row">
-                                    <div class="col-sm-6">
-                                        <div class="form-group">
-                                            <label for="inputName">Name</label>
-                                            <input type="text" class="form-control" id="inputName" required="">
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <div class="form-group">
-                                            <label for="inputEmail">Email</label>
-                                            <input type="email" class="form-control" id="inputEmail" required="">
-                                        </div>
+<section id="contact">
+    <div class="container-wrapper-contact">
+        <div class="container">
+            <h2>Contact Us</h2>
+            <hr>
+            <p id="description">We'd love to hear from you. Drop us a line and we'll try to get back to you
+                as soon as possible!</p>
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2 m-auto">
+                    <div class="contact-form">
+                        <form action="/examples/actions/confirmation.php" method="post">
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <label for="inputName">Name</label>
+                                        <input type="text" class="form-control" id="inputName" required="">
                                     </div>
                                 </div>
-                                <div class="form-group">
-                                    <label for="inputSubject">Subject</label>
-                                    <input type="text" class="form-control" id="inputSubject" required="">
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <label for="inputEmail">Email</label>
+                                        <input type="email" class="form-control" id="inputEmail" required="">
+                                    </div>
                                 </div>
-                                <div class="form-group">
-                                    <label for="inputMessage">Message</label>
-                                    <textarea class="form-control" id="inputMessage" rows="5" required=""></textarea>
-                                </div>
-                                <div class="text-center">
-                                    <a type="submit" class="btn btn-info btn-lg"><i class="fa fa-paper-plane"></i> Send</a>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-xs-4 col-md-offset-2 m-auto">
-                        <ul class="contact-details">
-                            <li id="contact-info">
-                                <p><i class="fas fa-map-marker-alt"></i> New York, NY</p>
-                            </li>
-                            <li id="contact-info">
-                                <p><i class="fas fa-phone"></i> 212.000.000</p>
-                            </li>
-                            <li id="contact-info">
-                                <p><i class="fas fa-envelope-open"></i> owner@infinity.nyc</p>
-                            </li>
-                        </ul>
+                            </div>
+                            <div class="form-group">
+                                <label for="inputSubject">Subject</label>
+                                <input type="text" class="form-control" id="inputSubject" required="">
+                            </div>
+                            <div class="form-group">
+                                <label for="inputMessage">Message</label>
+                                <textarea class="form-control" id="inputMessage" rows="5" required=""></textarea>
+                            </div>
+                            <div class="text-center">
+                                <p style="margin-top: 40px; margin-bottom: 0px;">
+                                    <a type="submit" class="btn btn-info btn-lg"><i class="fa fa-paper-plane"></i>
+                                        Send</a>
+                                </p>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col-xs-6 col-md-offset-2 m-auto">
+                    <ul class="nav-list justify-content-center">
+                        <li id="contact-info">
+                            <a><i class="fas fa-map-marker-alt"></i> <span>14 Allen St, NYC</span></a>
+                        </li>
+          
+                        <li id="contact-info">
+                            <a>
+                                <i class="fas fa-phone"></i>
+                                <span>212.000.000</span></a>
+                        </li>
+                        <li id="contact-info">
+                            <a>
+                                <i class="fas fa-envelope-open"></i> <span>owner@infinity.nyc</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-xs-6 col-md-offset-2 m-auto">
+                    <ul class="nav-list justify-content-center" style="list-style: none;">
+                        <li id="hours"><p id="contac-info">Open Monday - Friday </p></li>
+                        <li id="hours"><p id="contac-info">  9:00am - 7:00pm</p></li>
+                        <li id="hours" ><p id="contac-info"> Closed most weekends</p></li>
+                   </ul> 
+                </div>
         </div>
-    </section>
+    </div>
+</section>
 <!--./contact-section-->
 
 </main>
